--- a/index.html
+++ b/index.html
@@ -1,43 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-        
-        <title>nexter &mdash; your home, your freedom</title>
-    </head>
-    <body class="container">
-        <div class="sidebar">
-            Sidebar
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+    <title>nexter &mdash; your home, your freedom</title>
+</head>
+
+<body class="container">
+    <div class="sidebar">
+        Sidebar
+    </div>
+    <header class="header">
+        Header
+    </header>
+    <div class="realtors">
+        Top 3 Realtors
+    </div>
+    <section class="features">
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="img/sprite.svg#icon-global"></use>
+            </svg>
+            <h4 class="heading-4">
+                World's Best Luxury Homes
+            </h4>
+            <p class="feature__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                facere dolor.
+            </p>
         </div>
-        <header class="header">
-            Header
-        </header>
-        <div class="realtors">
-            Top 3 Realtors
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="img/sprite.svg#icon-trophy"></use>
+            </svg>
+            <h4 class="heading-4">
+                Only the best properties
+            </h4>
+            <p class="feature__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                facere dolor.
+            </p>
         </div>
-        <section class="features">
-            features
-        </section>
-        <div class="story__pictures">
-            story pictures
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <h4 class="heading-4">
+                All Homes in top locations
+            </h4>
+            <p class="feature__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                facere dolor.
+            </p>
         </div>
-        <div class="story__content">
-            story content
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="img/sprite.svg#icon-key"></use>
+            </svg>
+            <h4 class="heading-4">
+                New Home in one Week
+            </h4>
+            <p class="feature__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                facere dolor.
+            </p>
         </div>
-        <section class="homes">
-            Homes
-        </section>
-        <section class="gallery">
-            Gallery
-        </section>
-        <footer class="footer">
-            Footer
-        </footer>
-    </body>
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="img/sprite.svg#icon-presentation"></use>
+            </svg>
+            <h4 class="heading-4">
+                Top 1% Realtors
+            </h4>
+            <p class="feature__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                facere dolor.
+            </p>
+        </div>
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="img/sprite.svg#icon-lock"></use>
+            </svg>
+            <h4 class="heading-4">
+                Secure Payments on Nexter
+            </h4>
+            <p class="feature__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                facere dolor.
+            </p>
+        </div>
+    </section>
+    <div class="story__pictures">
+        story pictures
+    </div>
+    <div class="story__content">
+        story content
+    </div>
+    <section class="homes">
+        Homes
+    </section>
+    <section class="gallery">
+        Gallery
+    </section>
+    <footer class="footer">
+        Footer
+    </footer>
+</body>
+
 </html>
