Building the features section-part-2-complete

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <svg class="feature__icon">
                 <use xlink:href="img/sprite.svg#icon-global"></use>
             </svg>
-            <h4 class="heading-4">
+            <h4 class="heading-4 heading-4--dark">
                 World's Best Luxury Homes
             </h4>
             <p class="feature__text">
@@ -41,12 +41,11 @@
             <svg class="feature__icon">
                 <use xlink:href="img/sprite.svg#icon-trophy"></use>
             </svg>
-            <h4 class="heading-4">
+            <h4 class="heading-4 heading-4--dark">
                 Only the best properties
             </h4>
             <p class="feature__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
-                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                Lorem ipsum, dolor sit itationem repudiandae aut necessitatibus
                 facere dolor.
             </p>
         </div>
@@ -54,11 +53,11 @@
             <svg class="feature__icon">
                 <use xlink:href="img/sprite.svg#icon-map-pin"></use>
             </svg>
-            <h4 class="heading-4">
+            <h4 class="heading-4 heading-4--dark">
                 All Homes in top locations
             </h4>
             <p class="feature__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                e id numquam, earum eligendi repellendus sunt perferendis
                 impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
                 facere dolor.
             </p>
@@ -67,11 +66,11 @@
             <svg class="feature__icon">
                 <use xlink:href="img/sprite.svg#icon-key"></use>
             </svg>
-            <h4 class="heading-4">
+            <h4 class="heading-4 heading-4--dark">
                 New Home in one Week
             </h4>
             <p class="feature__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
+                Lorem ipsum, dolor sit e id numquam, earum eligendi repellendus sunt perferendis
                 impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
                 facere dolor.
             </p>
@@ -80,25 +79,23 @@
             <svg class="feature__icon">
                 <use xlink:href="img/sprite.svg#icon-presentation"></use>
             </svg>
-            <h4 class="heading-4">
+            <h4 class="heading-4 heading-4--dark">
                 Top 1% Realtors
             </h4>
             <p class="feature__text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
-                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
-                facere dolor.
+                impedit aliquam doloribus delectus!
             </p>
         </div>
         <div class="feature">
             <svg class="feature__icon">
                 <use xlink:href="img/sprite.svg#icon-lock"></use>
             </svg>
-            <h4 class="heading-4">
+            <h4 class="heading-4 heading-4--dark">
                 Secure Payments on Nexter
             </h4>
             <p class="feature__text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius atque id numquam, earum eligendi repellendus sunt perferendis
-                impedit aliquam doloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
+                Lorem ipsum, dolor oloribus delectus! Nesciunt nobis quibusdam exercitationem repudiandae aut necessitatibus
                 facere dolor.
             </p>
         </div>
