--- a/index.html
+++ b/index.html
@@ -104,7 +104,18 @@
         story pictures
     </div>
     <div class="story__content">
-        story content
+        <h3 class="heading-3 mb-sm">
+            Happy Customers
+        </h3>
+        <h2 class="heading-2 heading-2--dark mb-md">
+            &ldquo;The best decision of our lives.&rdquo;
+        </h2>
+        <p class="story__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad similique nam odit facilis ab dignissimos ratione perspiciatis, repudiandae exercitationem.
+        </p>
+        <button class="btn">
+            Find Your own home
+        </button>
     </div>
     <section class="homes">
         Homes
