--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         </div>
     </section>
     <div class="story__pictures">
-        story pictures
+        <img src="img/story-1.jpeg" alt="1" class="story__img--1">
+        <img src="img/story-2.jpeg" alt="2" class="story__img--2">
     </div>
     <div class="story__content">
         <h3 class="heading-3 mb-sm">
