--- a/index.html
+++ b/index.html
@@ -333,7 +333,41 @@
         Gallery
     </section>
     <footer class="footer">
-        Footer
+        <ul class="nav">
+            <li class="nav__item">
+                <a href="#" class="nav__link">
+                    Find your dream home
+                </a>
+            </li>
+            <li class="nav__item">
+                    <a href="#" class="nav__link">
+                        Request Proposal
+                    </a>
+            </li>
+            <li class="nav__item">
+                    <a href="#" class="nav__link">
+                        Home Planner
+                    </a>
+            </li>
+            <li class="nav__item">
+                    <a href="#" class="nav__link">
+                        Contact Us
+                    </a>
+            </li>
+            <li class="nav__item">
+                    <a href="#" class="nav__link">
+                        Submit your property
+                    </a>
+            </li>
+            <li class="nav__item">
+                    <a href="#" class="nav__link">
+                        you can work with us
+                    </a>
+            </li>
+        </ul>
+        <p class="copyright">
+            &copy; Copyright 2018. Feel free to use this project for your own purposes.
+        </p>
     </footer>
 </body>
 
