--- a/index.html
+++ b/index.html
@@ -18,7 +18,25 @@
         Sidebar
     </div>
     <header class="header">
-        Header
+        <img src="img/logo.png" alt="Nexter Logo" class="header__logo">
+        <h3 class="heading-3">
+            Your Own Home:
+        </h3>
+        <h1 class="heading-1">
+            The ultimate personal freedom
+        </h1>
+        <button class="btn header__btn">
+            View our properties
+        </button>
+        <div class="header__seenon-text">
+            Seen on
+        </div>
+        <div class="header__seenon-logos">
+            <img src="img/logo-bbc.png" alt="BBC">
+            <img src="img/logo-forbes.png" alt="BBC">
+            <img src="img/logo-techcrunch.png" alt="BBC">
+            <img src="img/logo-bi.png" alt="BBC">
+        </div>
     </header>
     <div class="realtors">
         Top 3 Realtors
